force-app/main/default/objects/CCXR_Receipts__c/CCXR_Receipts__c.object-meta.xml
<CustomObject>
    <label>CCXR Receipts</label>
    <nameField>
        <displayFormat>RCP-{0000}</displayFormat>
        <label>CCXR Receipts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCXR Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>