force-app/main/default/objects/CCXR_Receipts__c/fields/CCXR_Order__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Order</label>
    <referenceTo>CCXR_Order__c</referenceTo>
    <relationshipLabel>CCXR Receipts</relationshipLabel>
    <relationshipName>CCXR_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>