force-app/main/default/objects/CCXR_Receipts__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <formula>DATEVALUE( CCXR_Order__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>