force-app/main/default/objects/CCXR_Receipts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Transaction_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>